--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "@ionic/angular": "^8.2.0",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.15.0"
+    "tslib": "^2.3.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^19.2.9",
